# OData1C

./: Makefile  README.md  README_ru.md  pyproject.toml
OData1C/: __init__.py  connection.py
OData1C/odata/: __init__.py  entity_manager.py  manager.py  metadata.py  metadata_manager.py  query.py
example/: fetching_data.py  metadata.py  models.py  modify_data.py  post_unpost_document.py
src/: connection.py
src/odata/: manager.py  query.py
tests/: conftest.py  test_connection.py  test_metadata_manager.py
tests/test_data/: expected_properties.json  metadata.xml
