[tool.poetry]
name = "odata1c"
version = "0.1.0"
description = ""
authors = ["Vladislav Akashev <vlad.akashev.w@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "OData1C"}]


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.7.0"
requests = "2.32.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
